Fix spacing of signup button on homepage

--- a/src/Components/Homepage/Homepage.scss
+++ b/src/Components/Homepage/Homepage.scss
@@ -43,9 +43,9 @@
 
 .homepg-signup-btn-container {
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
   width: 80%;
-  align-content: center;
+  align-items: center;
   justify-content: center;
 }
 
